tests/snapshots/snapshots__interpreter@netlayer_pingpong.pr.snap
---
source: tests/snapshots.rs
assertion_line: 482
expression: interp_output(path)
input_file: tests/cases/run/netlayer_pingpong.pr
---
got ping
pong
result pong ping
done
=> ()
