tests/snapshots/snapshots__interpreter@noescape.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/noescape.pr
---
42
7
=> ()
