tests/snapshots/snapshots__interpreter@nullary_fn.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/nullary_fn.pr
---
42
100
20
7
=> ()
