tests/snapshots/snapshots__interpreter@numeric_separators.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/numeric_separators.pr
---
1000000
true
1000
4294967296
1000.0005
125000000000
=> ()
