tests/snapshots/snapshots__interpreter@nursery_name_collision.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/nursery_name_collision.pr
---
note 1
note 2
note 3
sum 6
=> ()
