tests/snapshots/snapshots__interpreter@once.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/once.pr
---
42
105
=> ()
